--- a/app/globals.css
+++ b/app/globals.css
@@ -1,68 +1,91 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
-@layer base {
-  :root {
-		 --gradient: linear-gradient(to top left,#091E3A,#2F80ED,#2D9EE0);
-    --background: 0 0% 100%;
-    --foreground: 0 0% 13.33%;
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 13.33%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 13.33%;
-    --primary: 221.2 83.2% 53.3%;
-    --primary-foreground: 210 40% 98%;
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 221.2 83.2% 53.3%;
-    --radius: 0.5rem;
-  }
 
-  .dark {
-    --background: 0 0% 13.33%;
-    --foreground: 210 40% 98%;
-    --card: 0 0% 13.33%;
-    --card-foreground: 210 40% 98%;
-    --popover: 0 0% 13.33%;
-    --popover-foreground: 210 40% 98%;
-    --primary: 178.98 98.88% 34.9%;
-    --primary-foreground: 222.2 47.4% 11.2%;
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 224.3 76.3% 48%;
-  }
+@layer base {
+	:root {
+		--gradient: linear-gradient(to top left, #091e3a, #2f80ed, #2d9ee0);
+		--background: 0 0% 100%;
+		--foreground: 0 0% 13.33%;
+		--card: 0 0% 100%;
+		--card-foreground: 0 0% 13.33%;
+		--popover: 0 0% 100%;
+		--popover-foreground: 0 0% 13.33%;
+		--primary: 221.2 83.2% 53.3%;
+		--primary-foreground: 210 40% 98%;
+		--secondary: 210 40% 96.1%;
+		--secondary-foreground: 222.2 47.4% 11.2%;
+		--muted: 210 40% 96.1%;
+		--muted-foreground: 215.4 16.3% 46.9%;
+		--accent: 210 40% 96.1%;
+		--accent-foreground: 222.2 47.4% 11.2%;
+		--destructive: 0 84.2% 60.2%;
+		--destructive-foreground: 210 40% 98%;
+		--border: 214.3 31.8% 91.4%;
+		--input: 214.3 31.8% 91.4%;
+		--ring: 221.2 83.2% 53.3%;
+		--radius: 0.5rem;
+	}
+
+	.dark {
+		--background: 0 0% 13.33%;
+		--foreground: 210 40% 98%;
+		--card: 0 0% 13.33%;
+		--card-foreground: 210 40% 98%;
+		--popover: 0 0% 13.33%;
+		--popover-foreground: 210 40% 98%;
+		--primary: 178.98 98.88% 34.9%;
+		--primary-foreground: 222.2 47.4% 11.2%;
+		--secondary: 217.2 32.6% 17.5%;
+		--secondary-foreground: 210 40% 98%;
+		--muted: 217.2 32.6% 17.5%;
+		--muted-foreground: 215 20.2% 65.1%;
+		--accent: 217.2 32.6% 17.5%;
+		--accent-foreground: 210 40% 98%;
+		--destructive: 0 62.8% 30.6%;
+		--destructive-foreground: 210 40% 98%;
+		--border: 217.2 32.6% 17.5%;
+		--input: 217.2 32.6% 17.5%;
+		--ring: 224.3 76.3% 48%;
+	}
 }
 
 @layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
+	* {
+		@apply border-border;
+	}
+
+	body {
+		@apply bg-background text-foreground;
+	}
 
 	.div-gradient {
-		   background: linear-gradient(299.49deg, rgba(4, 180, 176, 0.47) 1.64%, rgba(4, 100, 98, 0.18) 82.22%)
+		background: linear-gradient(299.49deg,
+				rgba(4, 180, 176, 0.47) 1.64%,
+				rgba(4, 100, 98, 0.18) 82.22%);
 	}
 
 	.green-linear {
-		background: linear-gradient(96.61deg, #00615F -31.43%, #01B1AE 135.89%);
+		background: linear-gradient(96.61deg, #00615f -31.43%, #01b1ae 135.89%);
+	}
+
+	/* width */
+	::-webkit-scrollbar {
+		width: 8px;
+	}
+
+	/* Track */
+	::-webkit-scrollbar-track {
+		background: transparent;
+	}
+
+	/* Handle */
+	::-webkit-scrollbar-thumb {
+		background: #01b1ae;
+		border-radius: 9px;
+	}
+
+	.cbs-gradient {
+		background: linear-gradient(180deg, rgba(1, 177, 174, 0.33) 0%, rgba(54, 211, 209, 0) 52.6%, rgba(1, 177, 174, 0.33) 100%);
 	}
 }
